--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,3 +23,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - uses: actions/upload-artifact@v4
+      with:
+        name: target
+        path: server/target
